# bazel

./: README.md
.github/workflows/: main.yml
python/: MODULE.bazel  README.md
python/calculator/: BUILD.bazel  MODULE.bazel  calculator.py  calculator_test.py
python/python_web/: BUILD.bazel  MODULE.bazel  python_web.py
