load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "python_web_lib",
    srcs = ["python_web.py"],
    deps = [
        requirement("Flask"),
        "//calculator:calculator",
    ],
)

py_binary(
    name = "python_web",
    srcs = ["python_web.py"],
    main = "python_web.py",
    deps = [
        ":python_web_lib",
    ],
)


